force-app/main/default/objects/Product2/fields/UnidadesHQ__c.field-meta.xml
<CustomField>
    <fullName>UnidadesHQ__c</fullName>
    <label>Units / 40HQ</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>