force-app/main/default/objects/Product2/fields/UnidadesPorMasterBox__c.field-meta.xml
<CustomField>
    <fullName>UnidadesPorMasterBox__c</fullName>
    <label>Units per Master Box 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>