force-app/main/default/objects/Product2/fields/Units_per_Master_Box_4__c.field-meta.xml
<CustomField>
    <fullName>Units_per_Master_Box_4__c</fullName>
    <label>Units per Master Box 4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>