force-app/main/default/objects/Product2/fields/ValoracionDeLaFabrica__c.field-meta.xml
<CustomField>
    <fullName>ValoracionDeLaFabrica__c</fullName>
    <formula>IF ( Fabrica__r.RecordType.Name = &quot;Proveedor&quot; &amp;&amp;  ISPICKVAL ( Fabrica__r.Type , &quot;Fábrica&quot; ) ,
TEXT ( Fabrica__r.Rating ) ,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valoración de la fábrica</label>
    <type>Text</type>
</CustomField>