force-app/main/default/objects/Product2/fields/Volumen_Masterbox_m3__c.field-meta.xml
<CustomField>
    <fullName>Volumen_Masterbox_m3__c</fullName>
    <formula>( VALUE(MasterboxAltoCm__c) / 100 ) * ( VALUE(MasterboxAnchoCm__c) / 100 ) * ( VALUE(MasterboxLargoCm__c) / 100 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Box 1 (CBM) calculado</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>