force-app/main/default/objects/Product2/fields/Volumen_Producto_m3__c.field-meta.xml
<CustomField>
    <fullName>Volumen_Producto_m3__c</fullName>
    <formula>(VALUE(ProductoAltoCm__c) / 100) * (VALUE(ProductoAnchoCm__c) / 100) * (VALUE(ProductoLargoCm__c) / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producto (CBM) calculado</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>