force-app/main/default/objects/Product2/recordTypes/Producto.recordType-meta.xml
<RecordType>
    <fullName>Producto</fullName>
    <active>true</active>
    <description>Use este tipo de registro para productos</description>
    <label>1-Producto</label>
</RecordType>