force-app/main/default/objects/Product2/validationRules/DireccionComercialCamposRestringidos.validationRule-meta.xml
<ValidationRule>
    <fullName>DireccionComercialCamposRestringidos</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Name = &quot;Direccion Comercial&quot;
&amp;&amp; NOT ( ISNEW() )
&amp;&amp; OR (
ISCHANGED ( Name ) ,
ISCHANGED ( IsActive ) ,
ISCHANGED ( CurrencyIsoCode ) ,
ISCHANGED ( RecordTypeId )
)</errorConditionFormula>
    <errorMessage>RV01: Usuarios con el perfil &quot;Direccion Comercial&quot; no pueden actualizar ciertos campos en el producto.</errorMessage>
</ValidationRule>