force-app/main/default/objects/Product2/validationRules/Producto_Base_NO_se_Activa.validationRule-meta.xml
<ValidationRule>
    <fullName>Producto_Base_NO_se_Activa</fullName>
    <active>true</active>
    <description>Los productos base deben permanecer Inactivos</description>
    <errorConditionFormula>AND(RecordType.DeveloperName == &apos;Producto&apos;,
ProductCode != &apos;22222222&apos;,
IsActive)</errorConditionFormula>
    <errorDisplayField>IsActive</errorDisplayField>
    <errorMessage>RV03: Los productos base deben permanecer Inactivos</errorMessage>
</ValidationRule>