force-app/main/default/objects/Product2/listViews/Portal_Products_Review_Pending.listView-meta.xml
<ListView>
    <fullName>Portal_Products_Review_Pending</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>startsWith</operation>
        <value>[Providers Portal]</value>
    </filters>
    <label>Portal Products - [Review Pending]</label>
</ListView>