force-app/main/default/objects/Product2/listViews/Productos_en_Draft.listView-meta.xml
<ListView>
    <fullName>Productos_en_Draft</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>Tech_Status__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Imagen1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tech_Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Productos en Draft</label>
</ListView>