force-app/main/default/objects/Product2/listViews/Prospectos_de_Producto.listView-meta.xml
<ListView>
    <fullName>Prospectos_de_Producto</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PrecioDeFabrica__c</columns>
    <columns>Proveedor_o_Candidato__c</columns>
    <columns>Thumb1__c</columns>
    <columns>Feria__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Prospecto_de_Producto</value>
    </filters>
    <label>Prospectos de Producto</label>
    <sharedTo>
        <role>Gerencia_Compras</role>
        <role>Gerencia_General</role>
    </sharedTo>
</ListView>